fixed z-index top bar
git-svn-id: http://svn.ilias.de/svn/ilias/trunk@53926 21b2c9ec-7c21-0410-8b45-9bfb8ed2bfc5

--- a/templates/default/less/Services/MainMenu/delos.less
+++ b/templates/default/less/Services/MainMenu/delos.less
@@ -124,6 +124,7 @@ input.ilOpenIDBox {
 	padding: 0;
 	height: 40px;
 	top: 0;
+	z-index: 1040;
 }
 
 .ilTopFixed {
